--- a/openfisca_pf/tests/dicp/cst-s/cas_de_tests_cst-s.yaml
+++ b/openfisca_pf/tests/dicp/cst-s/cas_de_tests_cst-s.yaml
@@ -34,17 +34,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 5000
-    cst_s_du_tranche_2: 30000
-    cst_s_du_tranche_3: 50000
-    cst_s_du_tranche_4: 70000
-    cst_s_du_tranche_5: 90000
-    cst_s_du_tranche_6: 120000
-    cst_s_du_tranche_7: 150000
-    cst_s_du_tranche_8: 180000
-    cst_s_du_tranche_9: 210000
-    cst_s_du_tranche_10: 230000
-    cst_s_du_tranche_11: 250000
+    cst_s_due_tranche_1: 5000
+    cst_s_due_tranche_2: 30000
+    cst_s_due_tranche_3: 50000
+    cst_s_due_tranche_4: 70000
+    cst_s_due_tranche_5: 90000
+    cst_s_due_tranche_6: 120000
+    cst_s_due_tranche_7: 150000
+    cst_s_due_tranche_8: 180000
+    cst_s_due_tranche_9: 210000
+    cst_s_due_tranche_10: 230000
+    cst_s_due_tranche_11: 250000
     cst_s_due_totale: 1385000
 - name: 04 - 3 tranches
   period: 2020-01
@@ -64,17 +64,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 15000
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 360000
-    cst_s_du_tranche_7: 0
-    cst_s_du_tranche_8: 0
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 0
-    cst_s_du_tranche_11: 2500000
+    cst_s_due_tranche_1: 15000
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 360000
+    cst_s_due_tranche_7: 0
+    cst_s_due_tranche_8: 0
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 0
+    cst_s_due_tranche_11: 2500000
     cst_s_due_totale: 2875000
 - name: 05 - 7 dernières tranches
   period: 2020-01
@@ -94,17 +94,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 0
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 180000
-    cst_s_du_tranche_6: 360000
-    cst_s_du_tranche_7: 600000
-    cst_s_du_tranche_8: 900000
-    cst_s_du_tranche_9: 1260000
-    cst_s_du_tranche_10: 1610000
-    cst_s_du_tranche_11: 2000000
+    cst_s_due_tranche_1: 0
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 180000
+    cst_s_due_tranche_6: 360000
+    cst_s_due_tranche_7: 600000
+    cst_s_due_tranche_8: 900000
+    cst_s_due_tranche_9: 1260000
+    cst_s_due_tranche_10: 1610000
+    cst_s_due_tranche_11: 2000000
     cst_s_due_totale: 6910000
 - name: 06 - small values
   period: 2020-01
@@ -116,17 +116,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 0
-    cst_s_du_tranche_2: 1
-    cst_s_du_tranche_3: 4
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 0
-    cst_s_du_tranche_7: 0
-    cst_s_du_tranche_8: 0
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 0
-    cst_s_du_tranche_11: 0
+    cst_s_due_tranche_1: 0
+    cst_s_due_tranche_2: 1
+    cst_s_due_tranche_3: 4
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 0
+    cst_s_due_tranche_7: 0
+    cst_s_due_tranche_8: 0
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 0
+    cst_s_due_tranche_11: 0
     cst_s_due_totale: 5
 - name: 07 - big values with low precision
   period: 2020-01
@@ -137,17 +137,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 75000000
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 0
-    cst_s_du_tranche_7: 157500750
-    cst_s_du_tranche_8: 0
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 0
-    cst_s_du_tranche_11: 0
+    cst_s_due_tranche_1: 75000000
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 0
+    cst_s_due_tranche_7: 157500750
+    cst_s_due_tranche_8: 0
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 0
+    cst_s_due_tranche_11: 0
     cst_s_due_totale: 232500750
 - name: 08 - big values with high precision - fails in float32
   period: 2020-01
@@ -158,17 +158,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 0
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 0
-    cst_s_du_tranche_7: 148148148
-    cst_s_du_tranche_8: 177777777
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 0
-    cst_s_du_tranche_11: 0
+    cst_s_due_tranche_1: 0
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 0
+    cst_s_due_tranche_7: 148148148
+    cst_s_due_tranche_8: 177777777
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 0
+    cst_s_due_tranche_11: 0
     cst_s_due_totale: 325925925
 - name: 09 - big values with low precision again
   period: 2020-01
@@ -179,17 +179,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 0
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 0
-    cst_s_du_tranche_7: 22500022
-    cst_s_du_tranche_8: 28801080
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 0
-    cst_s_du_tranche_11: 0
+    cst_s_due_tranche_1: 0
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 0
+    cst_s_due_tranche_7: 22500022
+    cst_s_due_tranche_8: 28801080
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 0
+    cst_s_due_tranche_11: 0
     cst_s_due_totale: 51301102
 - name: 10 - checking roundings
   period: 2020-01
@@ -199,17 +199,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 0
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 0
-    cst_s_du_tranche_7: 0
-    cst_s_du_tranche_8: 0
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 229999999
-    cst_s_du_tranche_11: 0
+    cst_s_due_tranche_1: 0
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 0
+    cst_s_due_tranche_7: 0
+    cst_s_due_tranche_8: 0
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 229999999
+    cst_s_due_tranche_11: 0
     cst_s_due_totale: 229999999
 - name: 11 - checking roundings again
   period: 2020-01
@@ -219,17 +219,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 0
-    cst_s_du_tranche_2: 0
-    cst_s_du_tranche_3: 0
-    cst_s_du_tranche_4: 0
-    cst_s_du_tranche_5: 0
-    cst_s_du_tranche_6: 0
-    cst_s_du_tranche_7: 0
-    cst_s_du_tranche_8: 0
-    cst_s_du_tranche_9: 0
-    cst_s_du_tranche_10: 2299999
-    cst_s_du_tranche_11: 0
+    cst_s_due_tranche_1: 0
+    cst_s_due_tranche_2: 0
+    cst_s_due_tranche_3: 0
+    cst_s_due_tranche_4: 0
+    cst_s_due_tranche_5: 0
+    cst_s_due_tranche_6: 0
+    cst_s_due_tranche_7: 0
+    cst_s_due_tranche_8: 0
+    cst_s_due_tranche_9: 0
+    cst_s_due_tranche_10: 2299999
+    cst_s_due_tranche_11: 0
     cst_s_due_totale: 2299999
 - name: 12 - random values
   period: 2020-01
@@ -246,14 +246,14 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 5000
-    cst_s_du_tranche_2: 240000
-    cst_s_du_tranche_3: 40025
-    cst_s_du_tranche_4: 10801
-    cst_s_du_tranche_5: 12857
-    cst_s_du_tranche_6: 438
-    cst_s_du_tranche_7: 6166
-    cst_s_du_tranche_8: 666
+    cst_s_due_tranche_1: 5000
+    cst_s_due_tranche_2: 240000
+    cst_s_due_tranche_3: 40025
+    cst_s_due_tranche_4: 10801
+    cst_s_due_tranche_5: 12857
+    cst_s_due_tranche_6: 438
+    cst_s_due_tranche_7: 6166
+    cst_s_due_tranche_8: 666
     cst_s_due_totale: 315953
 - name: 13 - two big values on higher brackets
   period: 2020-01
@@ -264,8 +264,8 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_10: 368013800
-    cst_s_du_tranche_11: 400000000
+    cst_s_due_tranche_10: 368013800
+    cst_s_due_tranche_11: 400000000
     cst_s_due_totale: 768013800
 - name: 14 - all at 452555
   period: 2020-01
@@ -285,17 +285,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 2262
-    cst_s_du_tranche_2: 13576
-    cst_s_du_tranche_3: 22627
-    cst_s_du_tranche_4: 31678
-    cst_s_du_tranche_5: 40729
-    cst_s_du_tranche_6: 54306
-    cst_s_du_tranche_7: 67883
-    cst_s_du_tranche_8: 81459
-    cst_s_du_tranche_9: 95036
-    cst_s_du_tranche_10: 104087
-    cst_s_du_tranche_11: 113138
+    cst_s_due_tranche_1: 2262
+    cst_s_due_tranche_2: 13576
+    cst_s_due_tranche_3: 22627
+    cst_s_due_tranche_4: 31678
+    cst_s_due_tranche_5: 40729
+    cst_s_due_tranche_6: 54306
+    cst_s_due_tranche_7: 67883
+    cst_s_due_tranche_8: 81459
+    cst_s_due_tranche_9: 95036
+    cst_s_due_tranche_10: 104087
+    cst_s_due_tranche_11: 113138
     cst_s_due_totale: 626781
 - name: 15 - the evil one
   period: 2020-01
@@ -315,17 +315,17 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 666
-    cst_s_du_tranche_2: 666
-    cst_s_du_tranche_3: 666
-    cst_s_du_tranche_4: 666
-    cst_s_du_tranche_5: 666
-    cst_s_du_tranche_6: 666
-    cst_s_du_tranche_7: 666
-    cst_s_du_tranche_8: 666
-    cst_s_du_tranche_9: 666
-    cst_s_du_tranche_10: 666
-    cst_s_du_tranche_11: 666
+    cst_s_due_tranche_1: 666
+    cst_s_due_tranche_2: 666
+    cst_s_due_tranche_3: 666
+    cst_s_due_tranche_4: 666
+    cst_s_due_tranche_5: 666
+    cst_s_due_tranche_6: 666
+    cst_s_due_tranche_7: 666
+    cst_s_due_tranche_8: 666
+    cst_s_due_tranche_9: 666
+    cst_s_due_tranche_10: 666
+    cst_s_due_tranche_11: 666
     cst_s_due_totale: 7326
 - name: 16 - the bigger one
   period: 2020-01
@@ -338,8 +338,8 @@
     persons:
       Alicia: {}
   output:
-    cst_s_du_tranche_1: 15931091
-    cst_s_du_tranche_2: 95586550
-    cst_s_du_tranche_3: 159310917
-    cst_s_du_tranche_4: 778641975
+    cst_s_due_tranche_1: 15931091
+    cst_s_due_tranche_2: 95586550
+    cst_s_due_tranche_3: 159310917
+    cst_s_due_tranche_4: 778641975
     cst_s_due_totale: 1049470533
